--- a/index.html
+++ b/index.html
@@ -4,7 +4,51 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./node_modules/tailwindcss/tailwind.css" />
     <title>Split Landing Page</title>
   </head>
-  <body></body>
+  <body class="flex h-screen">
+    <div
+      class="flex-grow hover:flex-grow-[4] relative flex items-center justify-center flex-col"
+      style="transition: flex-grow 0.5s ease"
+    >
+      <h1
+        class="mb-8 w-[10rem] text-2xl font-medium text-center text-white md:text-5xl md:w-[20rem]"
+      >
+        Playstation 5
+      </h1>
+      <button
+        class="h-[3.5rem] w-[8rem] md:h-[4.5rem] md:w-[15rem] text-white border-[3px] hover:border-indigo-500 hover:bg-indigo-500"
+      >
+        BUY NOW
+      </button>
+      <div class="absolute inset-0 bg-indigo-500 bg-opacity-50 -z-10"></div>
+      <img
+        class="object-cover object-center absolute w-full h-full -z-20"
+        src="https://source.unsplash.com/NVD_32BBZFE"
+      />
+    </div>
+    <div
+      class="flex-grow hover:flex-grow-[4] relative flex items-center justify-center flex-col"
+      style="transition: flex-grow 0.5s ease"
+    >
+      <h1
+        class="mb-8 w-[10rem] text-2xl font-medium text-center text-white md:text-5xl md:w-[20rem]"
+      >
+        XBox Series X
+      </h1>
+      <button
+        class="h-[3.5rem] w-[8rem] md:h-[4.5rem] md:w-[15rem] text-white border-[3px] hover:border-green-800 hover:bg-green-800"
+      >
+        BUY NOW
+      </button>
+      <div
+        class="absolute inset-0 bg-green-500 bg-opacity-75 filter brightness-0 -z-10"
+      ></div>
+      <img
+        class="object-cover object-center absolute w-full h-full -z-20"
+        src="https://source.unsplash.com/DPOdCl4bGJU"
+      />
+    </div>
+  </body>
 </html>
