feat: add attribution

--- a/index.html
+++ b/index.html
@@ -50,5 +50,6 @@
         src="https://source.unsplash.com/DPOdCl4bGJU"
       />
     </div>
+    <script src="https://cdn.jsdelivr.net/gh/bdocoder/bdocoder/attributions/50projects50days.js"></script>
   </body>
 </html>
